@@ -1,7 +1,7 @@
 Begin4
 Title:          rpmrebuild
-Version:        2.15
-Entered-date:   2020-02-21
+Version:        2.16
+Entered-date:   2021-01-17
 Description:    rpmrebuild creates spec files used by the Red Hat Package Manager
                 in building RPM packages.  It uses the information it can
                 determine (from the rpm database) to fill in the proper spec file fields. 
@@ -12,7 +12,7 @@ Keywords:       RPM, spec file, package, packaging, automated build,
 Author:         gerbier@users.sourceforge.net (Eric Gerbier)
 		valery_reznic@users.sourceforge.net (Valery Reznic)
 Primary-site:   http://rpmrebuild.sourceforge.net
-		90 ko rpmrebuild-2.15-1.noarch.rpm
+		90 ko rpmrebuild-2.16-1.noarch.rpm
 Platforms:      linux, works with bash and rpm >= 3.x
 Copying-policy: GPL
 End
