@@ -3,7 +3,7 @@
     "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="fr" xml:lang="fr">
 <head>
-  <meta name="generator" content="HTML Tidy for HTML5 for Linux version 5.6.0" />
+  <meta name="generator" content="HTML Tidy for HTML5 for Linux version 5.7.28" />
   <title>rpmrebuild</title>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <meta name="Author" content="Gerbier" />
@@ -126,8 +126,8 @@
       </tr>
       <tr>
         <td>stable</td>
-        <td>2.15-1</td>
-        <td>2020-02-21</td>
+        <td>2.16-1</td>
+        <td>2021-01-17</td>
       </tr>
       <tr>
         <td>developpement</td>
@@ -143,7 +143,7 @@
       <a href="mailto:gerbier@users.sourceforge.net">Eric Gerbier</a>
     </address><br />
     merci à <a href="http://sourceforge.net"><img src="http://sourceforge.net/sflogo.php?group_id=57523" width="88" height="31" alt="SourceForge Logo" /></a> pour son hébergement<br />
-    page changed on 2020-02-21<br />
+    page changed on 2021-01-17<br />
     <p><a href="http://validator.w3.org/check?uri=referer"><img src="http://www.w3.org/Icons/valid-xhtml10" alt="Valid XHTML 1.0 Strict" height="31" width="88" /></a></p>
   </div>
 </body>
