@@ -14,6 +14,7 @@
   <div>
     <h1>news</h1>
     <ul>
+      <li>2021-01-17 : release 2.16, correction de bugs fix (args, filesystem, multi-install)</li>
       <li>2020-02-21 : release 2.15-1, correction de bugs, meilleurs diagnostics</li>
       <li>2018-10-19 : release 2.14-1, compatibilite avec vieilles version de rpm</li>
       <li>2018-09-12 : release 2.13-1, RECOMMENDS/SUPPLEMENTS rpm tag</li>
